--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 * {
-    font-family: 'Poppins', sans-serif;
-  }
-  .font-bangla{
-    font-family: "Hind Siliguri", sans-serif;
-  }
+  font-family: "Poppins", sans-serif;
+}
+.font-bangla {
+  font-family: "Hind Siliguri", sans-serif;
+}
 
-.activeBtn{
-    background-color: #422AD5;
-    color: white;
+.activeBtn {
+  background-color: #422ad5;
+  color: white;
 }
